DEPRECATED/camera/deployment-vsftpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsftpd
  namespace: camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vsftpd
  template:
    metadata:
      labels:
        app: vsftpd
    spec:
      volumes:
        - name: ftp
          persistentVolumeClaim:
            claimName: ftp
      containers:
        - name: vsftpd
          image: harbor.andreybondarenko.com/library/docker-vsftpd:latest
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 21
            - containerPort: 20
            - containerPort: 21110
            - containerPort: 21111
          volumeMounts:
            - mountPath: "/home/vsftpd"
              name: ftp
