DEPRECATED/camera/lighttpd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camera
  namespace: camera
spec:
  selector:
    matchLabels:
      app: camera
  template:
    metadata:
      labels:
        app: camera
    spec:
      containers:
        - name: camera
          image: harbor.andreybondarenko.com/library/camera:latest
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
