DEPRECATED/camera/service-ftp.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: camera
  name: ftp
  labels:
    tier: vsftpd
spec:
  selector:
    app: vsftpd
  ports:
    - protocol: TCP
      name: data
      port: 21
    - protocol: TCP
      name: command
      port: 20
    - protocol: TCP
      name: passv
      port: 21110
    - protocol: TCP
      name: passv1
      port: 21111
  externalIPs:
    - 192.168.1.209
