DEPRECATED/camera/vsftpd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsftpd
  namespace: camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vsftpd
  template:
    metadata:
      labels:
        app: vsftpd
    spec:
      volumes:
        - name: ftp
          persistentVolumeClaim:
            claimName: ftp
      containers:
        - name: vsftpd
          image: harbor.andreybondarenko.com/library/docker-vsftpd:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "400m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 21
            - containerPort: 20
            - containerPort: 21110
            - containerPort: 21111
          volumeMounts:
            - mountPath: "/home/vsftpd"
              name: ftp
---
apiVersion: v1
kind: Service
metadata:
  namespace: camera
  name: ftp
  labels:
    tier: vsftpd
spec:
  selector:
    app: vsftpd
  ports:
    - protocol: TCP
      name: data
      port: 21
    - protocol: TCP
      name: command
      port: 20
    - protocol: TCP
      name: passv
      port: 21110
    - protocol: TCP
      name: passv1
      port: 21111
  externalIPs:
    - 192.168.1.111
